force-app/main/default/objects/invoice_info__c/invoice_info__c.object-meta.xml
<CustomObject>
    <description>タン　member_info_seq と kanri_num の組み合わせのデータが
 2021年４月以降のデータでないと、重複が発生してしまうので要注意。（元データが原因）

invoice_infoが生まれたタイミングで連携。
9時～19時の間、30分に1回更新</description>
    <label>請求情報</label>
    <nameField>
        <label>請求情報名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>