force-app/main/default/objects/invoice_info__c/fields/Abandoning_the_claim__c.field-meta.xml
<CustomField>
    <fullName>Abandoning_the_claim__c</fullName>
    <defaultValue>false</defaultValue>
    <label>断念申請</label>
    <type>Checkbox</type>
</CustomField>