force-app/main/default/objects/invoice_info__c/fields/Abandoning_the_claim_detail__c.field-meta.xml
<CustomField>
    <fullName>Abandoning_the_claim_detail__c</fullName>
    <label>断念申請内容</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>