force-app/main/default/objects/invoice_info__c/fields/Auction_data__c.field-meta.xml
<CustomField>
    <fullName>Auction_data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>フローでロットで照合して紐づけ</description>
    <label>関連するオークションデータ</label>
    <referenceTo>Auction_Data__c</referenceTo>
    <relationshipLabel>請求情報</relationshipLabel>
    <relationshipName>Auction_data_invoice_info</relationshipName>
    <type>Lookup</type>
</CustomField>