force-app/main/default/objects/invoice_info__c/fields/auctiondata_carname__c.field-meta.xml
<CustomField>
    <fullName>auctiondata_carname__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Auction_data__c)),
    Auction_data__r.Model__c,
    oneprice_relation__r.car_name__c
)</formula>
    <label>車種</label>
    <type>Text</type>
</CustomField>