force-app/main/default/objects/invoice_info__c/fields/depot_type__c.field-meta.xml
<CustomField>
    <fullName>depot_type__c</fullName>
    <label>保管区分</label>
    <length>255</length>
    <type>Text</type>
</CustomField>