force-app/main/default/objects/invoice_info__c/fields/dpnum__c.field-meta.xml
<CustomField>
    <fullName>dpnum__c</fullName>
    <description>伝票番号:国内渡し→hdb_d_seikyuu.dpnum／シッピング→ null</description>
    <label>伝票番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>