force-app/main/default/objects/invoice_info__c/fields/end_type__c.field-meta.xml
<CustomField>
    <fullName>end_type__c</fullName>
    <label>締め区分</label>
    <length>255</length>
    <type>Text</type>
</CustomField>