force-app/main/default/objects/invoice_info__c/fields/Export_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Export_Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>輸出車両管理</label>
    <referenceTo>Export_Vehicle__c</referenceTo>
    <relationshipLabel>請求情報</relationshipLabel>
    <relationshipName>Export_Vehicle_for_invoice</relationshipName>
    <type>Lookup</type>
</CustomField>