force-app/main/default/objects/invoice_info__c/fields/internal_payment_deadline__c.field-meta.xml
<CustomField>
    <fullName>internal_payment_deadline__c</fullName>
    <inlineHelpText>自社AA：入金期限（3営業日後）から+2営業日
代行AA：入金期限はそのまま7営業日とするので、変更しない。</inlineHelpText>
    <label>社内入金期限</label>
    <type>Date</type>
</CustomField>