force-app/main/default/objects/invoice_info__c/fields/invoice_amount__c.field-meta.xml
<CustomField>
    <fullName>invoice_amount__c</fullName>
    <label>税抜価格</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>