force-app/main/default/objects/invoice_info__c/fields/invoice_amount_dollar__c.field-meta.xml
<CustomField>
    <fullName>invoice_amount_dollar__c</fullName>
    <label>税抜価格（USD）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>