force-app/main/default/objects/invoice_info__c/fields/invoice_get_money__c.field-meta.xml
<CustomField>
    <fullName>invoice_get_money__c</fullName>
    <formula>receipt_date__c -  invoicing_date__c</formula>
    <label>請求書発行日～着金日（/日）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>