force-app/main/default/objects/invoice_info__c/fields/invoice_info_detail__c.field-meta.xml
<CustomField>
    <fullName>invoice_info_detail__c</fullName>
    <label>請求情報詳細</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>