force-app/main/default/objects/invoice_info__c/fields/invoice_num__c.field-meta.xml
<CustomField>
    <fullName>invoice_num__c</fullName>
    <description>請求番号:国内渡し→hdb_d_seikyuu.sk_num／シッピング→採番テーブル(&apos;ST&apos;+YYMM999999)/varchar(16)</description>
    <label>請求番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>