force-app/main/default/objects/invoice_info__c/fields/invoice_status__c.field-meta.xml
<CustomField>
    <fullName>invoice_status__c</fullName>
    <label>処理状態</label>
    <length>255</length>
    <type>Text</type>
</CustomField>