force-app/main/default/objects/invoice_info__c/fields/invoice_status_pass__c.field-meta.xml
<CustomField>
    <fullName>invoice_status_pass__c</fullName>
    <label>処理状態（パス）</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>請求待ち</fullName>
            </value>
            <value>
                <fullName>未入金</fullName>
            </value>
            <value>
                <fullName>一部入金</fullName>
            </value>
            <value>
                <fullName>申請中</fullName>
            </value>
            <value>
                <fullName>取消</fullName>
            </value>
            <value>
                <fullName>入金済み</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>