force-app/main/default/objects/invoice_info__c/fields/invoice_tax__c.field-meta.xml
<CustomField>
    <fullName>invoice_tax__c</fullName>
    <label>税額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>