force-app/main/default/objects/invoice_info__c/fields/invoice_type__c.field-meta.xml
<CustomField>
    <fullName>invoice_type__c</fullName>
    <label>請求種別</label>
    <length>255</length>
    <type>Text</type>
</CustomField>