force-app/main/default/objects/invoice_info__c/fields/invoicing_date__c.field-meta.xml
<CustomField>
    <fullName>invoicing_date__c</fullName>
    <label>請求書発行日</label>
    <type>Date</type>
</CustomField>