force-app/main/default/objects/invoice_info__c/fields/kanri_num__c.field-meta.xml
<CustomField>
    <fullName>kanri_num__c</fullName>
    <description>ss_info_detailはロット情報を持っていないので、紐づけ不可。
invoice_infoのsales_info_seqと紐づく、sales_info内のkanri_numはss_info_detailのss_kanri_numが一致するので、
ここの管理番号欄にはユーザー、ヤード、ワンプラの管理番号が入る。フローでこれと一致するワンプラ情報を取得</description>
    <label>管理番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>