force-app/main/default/objects/invoice_info__c/fields/keiri_request__c.field-meta.xml
<CustomField>
    <fullName>keiri_request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>請求断念時に使用</description>
    <label>経理依頼</label>
    <referenceTo>Request_Keiri__c</referenceTo>
    <relationshipLabel>請求情報</relationshipLabel>
    <relationshipName>invoice_infos</relationshipName>
    <type>Lookup</type>
</CustomField>