force-app/main/default/objects/invoice_info__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>関連する販売会員情報</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>請求情報に関連する販売会員情報</relationshipLabel>
    <relationshipName>Member_invoice_info</relationshipName>
    <type>Lookup</type>
</CustomField>