force-app/main/default/objects/invoice_info__c/fields/memo__c.field-meta.xml
<CustomField>
    <fullName>memo__c</fullName>
    <label>未入金メモ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>