force-app/main/default/objects/invoice_info__c/fields/Next_follow_up_date_invoice__c.field-meta.xml
<CustomField>
    <fullName>Next_follow_up_date_invoice__c</fullName>
    <label>次回追跡日（請求）</label>
    <type>Date</type>
</CustomField>