force-app/main/default/objects/invoice_info__c/fields/oneprice_relation__c.field-meta.xml
<CustomField>
    <fullName>oneprice_relation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ワンプライス車両</label>
    <referenceTo>ss_offer_info__c</referenceTo>
    <relationshipLabel>請求情報</relationshipLabel>
    <relationshipName>oneprice_relation</relationshipName>
    <type>Lookup</type>
</CustomField>