force-app/main/default/objects/invoice_info__c/fields/payment_deadline__c.field-meta.xml
<CustomField>
    <fullName>payment_deadline__c</fullName>
    <label>入金期限</label>
    <type>Date</type>
</CustomField>