force-app/main/default/objects/invoice_info__c/fields/payment_type__c.field-meta.xml
<CustomField>
    <fullName>payment_type__c</fullName>
    <label>決済種別</label>
    <length>255</length>
    <type>Text</type>
</CustomField>