force-app/main/default/objects/invoice_info__c/fields/receipt_amount__c.field-meta.xml
<CustomField>
    <fullName>receipt_amount__c</fullName>
    <inlineHelpText>着金額:着金処理時に更新（一部入金があるため着金日に値が存在しても税込請求金額と等しくなるとは限らない）</inlineHelpText>
    <label>着金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>