force-app/main/default/objects/invoice_info__c/fields/receipt_amount_dollar__c.field-meta.xml
<CustomField>
    <fullName>receipt_amount_dollar__c</fullName>
    <label>着金額（USD）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>