force-app/main/default/objects/invoice_info__c/fields/receipt_date__c.field-meta.xml
<CustomField>
    <fullName>receipt_date__c</fullName>
    <label>着金日（着金処理日）</label>
    <type>Date</type>
</CustomField>