force-app/main/default/objects/invoice_info__c/fields/receipt_date_year_month__c.field-meta.xml
<CustomField>
    <fullName>receipt_date_year_month__c</fullName>
    <formula>TEXT(YEAR(receipt_date__c)) &amp; &quot;/&quot; &amp;
RIGHT(&quot;0&quot; &amp; TEXT(MONTH(receipt_date__c)), 2)</formula>
    <label>着金日（年月）</label>
    <type>Text</type>
</CustomField>