force-app/main/default/objects/invoice_info__c/fields/registration_type__c.field-meta.xml
<CustomField>
    <fullName>registration_type__c</fullName>
    <label>登録区分</label>
    <length>255</length>
    <type>Text</type>
</CustomField>