force-app/main/default/objects/invoice_info__c/fields/Sale_Date__c.field-meta.xml
<CustomField>
    <fullName>Sale_Date__c</fullName>
    <description>ワンプラは含まない。</description>
    <formula>Auction_data__r.Sale_Date__c</formula>
    <inlineHelpText>ワンプラは含まない。</inlineHelpText>
    <label>売却日</label>
    <type>Date</type>
</CustomField>