force-app/main/default/objects/invoice_info__c/fields/Sale_Date_invoicing_date__c.field-meta.xml
<CustomField>
    <fullName>Sale_Date_invoicing_date__c</fullName>
    <description>ワンプラは表示不可</description>
    <formula>invoicing_date__c - Sale_Date__c</formula>
    <inlineHelpText>ワンプラは表示不可</inlineHelpText>
    <label>売却日～請求書発行日（/日）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>