force-app/main/default/objects/invoice_info__c/fields/sales_category__c.field-meta.xml
<CustomField>
    <fullName>sales_category__c</fullName>
    <formula>Auction_data__r.sales_category__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>売却エリア</label>
    <type>Text</type>
</CustomField>