force-app/main/default/objects/invoice_info__c/fields/sales_info_seq__c.field-meta.xml
<CustomField>
    <fullName>sales_info_seq__c</fullName>
    <label>売上情報連番</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>