force-app/main/default/objects/invoice_info__c/fields/seq__c.field-meta.xml
<CustomField>
    <fullName>seq__c</fullName>
    <externalId>true</externalId>
    <label>seq</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>