force-app/main/default/objects/invoice_info__c/fields/split_invoice_frequency__c.field-meta.xml
<CustomField>
    <fullName>split_invoice_frequency__c</fullName>
    <label>分割請求対象回</label>
    <length>255</length>
    <type>Text</type>
</CustomField>