force-app/main/default/objects/invoice_info__c/fields/target_year_month__c.field-meta.xml
<CustomField>
    <fullName>target_year_month__c</fullName>
    <label>対象年月</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>