force-app/main/default/objects/invoice_info__c/fields/total__c.field-meta.xml
<CustomField>
    <fullName>total__c</fullName>
    <formula>invoice_amount__c + invoice_tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>税込合計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>