force-app/main/default/objects/invoice_info__c/fields/total_usd__c.field-meta.xml
<CustomField>
    <fullName>total_usd__c</fullName>
    <formula>invoice_amount_dollar__c + invoice_tax_dollar__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>税込合計（USD）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>