force-app/main/default/objects/invoice_info__c/fields/u_member_id__c.field-meta.xml
<CustomField>
    <fullName>u_member_id__c</fullName>
    <description>invoice_infoには「member_seq_id」しかないので、DataSpider側で結合して「u_member_id」を取得</description>
    <label>会員ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>