force-app/main/default/objects/invoice_info__c/fields/update_check__c.field-meta.xml
<CustomField>
    <fullName>update_check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>更新用チェックボックス</label>
    <type>Checkbox</type>
</CustomField>