force-app/main/default/objects/invoice_info__c/fields/zjyu_kbn__c.field-meta.xml
<CustomField>
    <fullName>zjyu_kbn__c</fullName>
    <formula>CASE(
    TEXT(Member__r.zjyu_kbn__c),
    &quot;1&quot;, &quot;国内在住&quot;,
    &quot;2&quot;, &quot;海外在住&quot;,
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>会員の在住区分</label>
    <type>Text</type>
</CustomField>